# sortsort

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  cfg.rs  lib.rs  main.rs
src/algorithms/: bogo.rs  bubble.rs  cocktail_shaker.rs  gnome.rs  insertion.rs  merge.rs  mod.rs  odd_even.rs  quick.rs  selection.rs  shell.rs
